--- a/Selenium.UITest/Selenium.UITest.csproj
+++ b/Selenium.UITest/Selenium.UITest.csproj
@@ -61,7 +61,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OpenBrowser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UITest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
